[gd_scene load_steps=9 format=3 uid="uid://cjsrrhs05pdpb"]

[ext_resource type="Script" path="res://src/ui/UI.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dydoudqaj7hg7" path="res://res/background-new.png" id="2"]
[ext_resource type="PackedScene" uid="uid://dxh5gr04whbc5" path="res://src/ui/SevenSegmentDisplay.tscn" id="3"]
[ext_resource type="PackedScene" path="res://src/ui/GotoLevelDialog.tscn" id="4"]
[ext_resource type="PackedScene" path="res://src/ui/TilesetSelectDialog.tscn" id="5"]
[ext_resource type="FontFile" uid="uid://c4l8xblfe4bys" path="res://res/LiberationSans-Bold.ttf" id="7"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="FontFile" id="2"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("7"), ExtResource("7")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="UIImage" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 32.0
offset_right = 480.0
offset_bottom = 352.0
texture = ExtResource("2")

[node name="FileDialog" type="FileDialog" parent="."]
initial_position = 1
size = Vector2i(619, 162)
access = 2

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(35, 31)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 107.0
offset_bottom = 15.5
grow_vertical = 2

[node name="GameMenu" type="MenuButton" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Game"
switch_on_hover = true

[node name="LevelMenu" type="MenuButton" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Level"
switch_on_hover = true

[node name="AcceptDialog" type="AcceptDialog" parent="."]
initial_position = 2

[node name="ViewWindow" type="ReferenceRect" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 48.0
offset_right = 304.0
offset_bottom = 336.0

[node name="LevelDisplay" parent="." instance=ExtResource("3")]
position = Vector2(368, 78)

[node name="TimeDisplay" parent="." instance=ExtResource("3")]
position = Vector2(368, 154)

[node name="ChipsDisplay" parent="." instance=ExtResource("3")]
position = Vector2(368, 229)

[node name="GotoLevelDialog" parent="." instance=ExtResource("4")]
visible = false
anchors_preset = 0

[node name="TilesetSelectDialog" parent="." instance=ExtResource("5")]
visible = false
layout_mode = 1
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="HintPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 202.0
offset_right = 296.0
offset_bottom = 314.0
theme_override_styles/panel = SubResource("1")

[node name="HintText" type="Label" parent="HintPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 268.0
offset_bottom = 107.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("2")
text = "Hint text goes here"
clip_text = true

[node name="InventoryContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 325.0
offset_top = 262.0
offset_right = 457.0
offset_bottom = 328.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 4

[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="level_selected" from="GotoLevelDialog" to="." method="_on_GotoLevelDialog_level_selected"]
[connection signal="browse_activated" from="TilesetSelectDialog" to="." method="_on_TilesetSelectDialog_browse_activated"]
